--- a/app-web/index.html
+++ b/app-web/index.html
@@ -15,13 +15,16 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/sb-admin.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- Custom Fonts CSS-->
+    <link href="../bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    
+    <!-- Angular-Data-Grid-Bootstrap CSS -->
+    <link rel="stylesheet" href="../bower_components/angular-data-grid/demo/bootstrap/css/angular-data-grid.bootstrap.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
